--- a/README.org
+++ b/README.org
@@ -14,3 +14,5 @@ This *react application* can be run by executing
 #+end_src
 
 in the top directory of this repo.
+
+[[file:assets/game-screenshot.png][Gameplay]]
